Issue 14:	Visiblité du nom du loggeur
git-svn-id: https://jcertif-web-app.googlecode.com/svn/trunk@87 bdc9bba0-42ee-03f9-1e93-cd8d94170fb4

--- a/jcertif-web/src/main/webapp/resources/css/style.css
+++ b/jcertif-web/src/main/webapp/resources/css/style.css
@@ -60,7 +60,6 @@ a:visited {
 #header-user {
 	text-align: right;
 	margin-right: 5px;
-	padding-top: 50px;
 }
 
 #header-logout {
